syntax = "proto3";
import "google/protobuf/empty.proto";

package chatPackage;

message SendMessageRequest {
  // Мое сообщение
  string message = 1;
  string username = 2;
}

message JoinRequest {
	string username = 1;
}

message SendMessageResponse {  }

message GetMessagesStreamRequest {
	string username = 1;
}

message GetMessagesStreamResponse {
  // Сообщение пользователя
  string message = 1;
  // Имя (логин) пользователя
  string username = 2;
}

message GetInfoRequest {
	string username = 1;
}

message GetInfoResponse {
  string eventText = 1;
}

service ChatService {
  // Для админа
  rpc Join(JoinRequest) returns(google.protobuf.Empty);
  // Отправить сообщение от лица пользователя
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  // Подписка на все приходящие в чат сообщения
  rpc GetMessagesStream(GetMessagesStreamRequest) returns (stream GetMessagesStreamResponse);
  rpc GetInfo(GetInfoRequest) returns (stream GetInfoResponse);
}
